--- a/i-ching.html
+++ b/i-ching.html
@@ -22,9 +22,9 @@
 </script>
 
 
-<div id="outline-container-orgaeb7c95" class="outline-2">
-<h2 id="orgaeb7c95">I Ching</h2>
-<div class="outline-text-2" id="text-orgaeb7c95">
+<div id="outline-container-orgd87d489" class="outline-2">
+<h2 id="orgd87d489">I Ching</h2>
+<div class="outline-text-2" id="text-orgd87d489">
 <p>
 The I Ching is a divination method associated with a book of symbols. This is the <code>Book of Changes</code>. You could think about it as randomly selected blobs of advice from a big book of advice. 
 </p>
@@ -35,9 +35,9 @@ Let's make an I Ching simulation step-by-step.
 </div>
 </div>
 
-<div id="outline-container-orgf42bc97" class="outline-2">
-<h2 id="orgf42bc97">Hexagrams</h2>
-<div class="outline-text-2" id="text-orgf42bc97">
+<div id="outline-container-org847fd78" class="outline-2">
+<h2 id="org847fd78">Hexagrams</h2>
+<div class="outline-text-2" id="text-org847fd78">
 <p>
 Each symbol is a hexagram. A hexagram is a binary array of 6 digits. (Therefore 2<sup>6</sup>=64 different hexagrams). Each is represented vertically with horizontal lines ether complete (yang) or broken (yin). 
 </p>
@@ -52,26 +52,26 @@ These are the first 6 hexagrams of the <a href="https://en.wikipedia.org/wiki/Ki
 </div>
 </div>
 
-<div id="outline-container-org2e163b8" class="outline-2">
-<h2 id="org2e163b8">Hexagram selection</h2>
-<div class="outline-text-2" id="text-org2e163b8">
+<div id="outline-container-orgd43f852" class="outline-2">
+<h2 id="orgd43f852">Hexagram selection</h2>
+<div class="outline-text-2" id="text-orgd43f852">
 <p>
 To choose a hexagram some randomization method is needed. It is common to use ether coins or sticks (traditionally yarrow stalks). These two methods yield different probabilities. Here we will use the yarrow stalks method, which is older and more elaborate.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org19c3f9f" class="outline-2">
-<h2 id="org19c3f9f">Yarrow stalks algorithm</h2>
-<div class="outline-text-2" id="text-org19c3f9f">
+<div id="outline-container-orgbe59818" class="outline-2">
+<h2 id="orgbe59818">Yarrow stalks algorithm</h2>
+<div class="outline-text-2" id="text-orgbe59818">
 <p>
 There is quite a lot of ceremony (activity which does not effect the result) in this method. It would be simplest to just sample from the probabilities and generate the hexagram like that. Instead we are going to simulate it step-by-step, just for fun.
 </p>
 </div>
 
-<div id="outline-container-org4a04187" class="outline-3">
-<h3 id="org4a04187">Process</h3>
-<div class="outline-text-3" id="text-org4a04187">
+<div id="outline-container-org46c4061" class="outline-3">
+<h3 id="org46c4061">Process</h3>
+<div class="outline-text-3" id="text-org46c4061">
 <p>
 We generate two hexagrams in parallel. We go line by line from the bottom to the top. Since we generate two at the same time, each "line" can have four different states: 
 </p>
@@ -92,36 +92,36 @@ There are multiple versions of this method. I've chosen what appeared to be the 
 </div>
 </div>
 
-<div id="outline-container-org1b34870" class="outline-3">
-<h3 id="org1b34870">To generate a hexagram:</h3>
-<div class="outline-text-3" id="text-org1b34870">
+<div id="outline-container-org9e924ab" class="outline-3">
+<h3 id="org9e924ab">To generate a hexagram:</h3>
+<div class="outline-text-3" id="text-org9e924ab">
 <p>
 We are going to make various piles of stalks. I will refer to these with single character names (<code>l</code>, <code>r</code>, <code>d</code>, etc). We also want to recall intermediary results that go into the final result. These will be referred to as <code>result-a</code>, <code>result-b</code>, <code>result-c</code>. For each hexagram we need to generate 6 lines. Each line is attained from the sum of three results.
 </p>
 
 <ol class="org-ol">
-<li>Start with 50 stalks</li>
-<li>Remove one stalk (place it in discard pile <code>d</code>). This one will not be used for generating this hexagram. We are left with 49.</li>
-<li>Divide into two approximately equal piles. We will call these piles <code>l</code> and <code>r</code>.</li>
-<li>Take one stalk from <code>r</code>. We will store this in pile <code>s</code>.</li>
+<li>Start with 50 stalks in the initial pile <code>i</code></li>
+<li>Remove one stalk (place it in pile <code>x</code>). This one will not be used for generating this hexagram. We are left with 49.</li>
+<li>Divide <code>i</code> into two approximately equal piles. We will call these piles <code>l</code> (left) and <code>r</code> (right).</li>
+<li>Take one stalk from <code>r</code>. We will store this in pile of a single stalk <code>s</code>.</li>
 <li>Draw from <code>l</code> in groups of 4, placing the groups of 4 into pile <code>p</code>, until there are 4 or fewer remaining in <code>l</code>.</li>
 <li>Draw from <code>r</code> in groups of 4, placing the groups of 4 into <code>p</code>, until there are 4 or fewer remaining in <code>r</code>.</li>
 <li>Sum the count of <code>l</code>,  <code>r</code> and <code>s</code>. If this sum is 5 set <code>result-a</code> to 3, if the sum is 9 then set <code>result-a</code> to 2. These are the only possible sums if the method is followed correctly.</li>
-<li>Discard the contents of <code>l</code>, <code>r</code> and <code>s</code> into <code>d</code>.</li>
-<li>Repeat steps 3 to 6.</li>
+<li>Discard the contents of <code>l</code>, <code>r</code> and <code>s</code> into discard pile <code>d</code>.</li>
+<li>Move the contents of <code>p</code> back into the initial pile <code>i</code> Repeat steps 3 to 6.</li>
 <li>Sum the new contents of <code>l</code>, <code>r</code> and <code>s</code>. If this sum is 8 set <code>result-b</code> to 2, if the sum is 4 then set <code>result-b</code> to 3. These are the only possible sums if the method is followed correctly.</li>
 <li>Discard the contents of <code>l</code>, <code>r</code> and <code>s</code> into <code>d</code>.</li>
-<li>Repeat steps 3 to 6.</li>
-<li>Sum the new contents of <code>l</code> and <code>r</code> and this time also <code>s</code>. If this sum is 8 set <code>result-c</code> to 2, if the sum is 4 then set <code>result-c</code> to 3. These are the only possible sums if the method is followed correctly.</li>
-<li>Sum the values of <code>result-a</code>, <code>result-b</code> and <code>result-c</code>. This will be ether 6, 7, 8 or 9. This represents the selected bottom line.</li>
-<li>Gather all the stalks apart from the one removed in step 2. Repeat steps 3 to 14 for each of the remaining 5 lines (ascending).</li>
+<li>Move the contents of <code>p</code> back into the initial pile <code>i</code> Repeat steps 3 to 6.</li>
+<li>Sum the new contents of <code>l</code>, <code>r</code> and  <code>s</code>. If this sum is 8 set <code>result-c</code> to 2, if the sum is 4 then set <code>result-c</code> to 3. These are the only possible sums if the method is followed correctly.</li>
+<li>Sum the values of <code>result-a</code>, <code>result-b</code> and <code>result-c</code>. This will be ether 6, 7, 8 or 9. This is line's value.</li>
+<li>Gather all the stalks from all piles apart from <code>x</code> (the one removed in step 2). Repeat steps 3 to 14 for each of the remaining 5 lines (ascending).</li>
 </ol>
 </div>
 </div>
 
-<div id="outline-container-orgdaff887" class="outline-3">
-<h3 id="orgdaff887">Implementation Notes</h3>
-<div class="outline-text-3" id="text-orgdaff887">
+<div id="outline-container-org77974bf" class="outline-3">
+<h3 id="org77974bf">Implementation Notes</h3>
+<div class="outline-text-3" id="text-org77974bf">
 <p>
 The algorithm explained above is implemented here in ClojureScript using Scittle to run it in the browser. The code is editable do feel free to tweak it and play around with it. Pseudo-randomness is added at the approx half splitting point in step 3. To make this somewhat realistic we sample from a normal distribution using a Box-Muller transform, and then round to the nearest integer to create an offset to the split.
 </p>
@@ -261,9 +261,9 @@ The sole purpose of the code below is to represent a common version of the yarro
 </div>
 
 
-<div id="outline-container-org5e3b809" class="outline-2">
-<h2 id="org5e3b809">Meanings</h2>
-<div class="outline-text-2" id="text-org5e3b809">
+<div id="outline-container-orge2e5cf4" class="outline-2">
+<h2 id="orge2e5cf4">Meanings</h2>
+<div class="outline-text-2" id="text-orge2e5cf4">
 <p>
 The general idea seems to be the transition from the first to the second hexagram. (Book of Changes, remember) You can look up the symbols and contemplate their interpretations here:
 </p>
