--- a/networking-in-lisp.html
+++ b/networking-in-lisp.html
@@ -16,22 +16,22 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org35bdac2" class="outline-2">
-<h2 id="org35bdac2">Look mum, no HTTP client!</h2>
-<div class="outline-text-2" id="text-org35bdac2">
+<div id="outline-container-orga5fe3ef" class="outline-2">
+<h2 id="orga5fe3ef">Look mum, no HTTP client!</h2>
+<div class="outline-text-2" id="text-orga5fe3ef">
 <p>
 Usually when you want to make an HTTP GET request in your favorite programming language you probably do something like import an HTTP library, make a client, call a GET method on that client and away we go. Just for fun, and to get more familiar with Common Lisp I figured I'd instead make a request from scratch. But, because of Sagan, apple pie and turtles all the way down, I won't be doing anything "from scratch". Instead we'll just be dipping one layer down.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org1e63a70" class="outline-2">
-<h2 id="org1e63a70">Networking basics</h2>
-<div class="outline-text-2" id="text-org1e63a70">
+<div id="outline-container-org3cea09e" class="outline-2">
+<h2 id="org3cea09e">Networking basics</h2>
+<div class="outline-text-2" id="text-org3cea09e">
 </div>
-<div id="outline-container-org408e0b9" class="outline-3">
-<h3 id="org408e0b9">TCP/IP</h3>
-<div class="outline-text-3" id="text-org408e0b9">
+<div id="outline-container-org654de14" class="outline-3">
+<h3 id="org654de14">TCP/IP</h3>
+<div class="outline-text-3" id="text-org654de14">
 
 <div class="figure">
 <p><img src="images/http-layers.png" alt="http-layers.png" />
@@ -54,9 +54,9 @@ TCP ensures that internet applications can talk reliably to each other with erro
 </div>
 </div>
 
-<div id="outline-container-orge4a72ac" class="outline-3">
-<h3 id="orge4a72ac">Sockets</h3>
-<div class="outline-text-3" id="text-orge4a72ac">
+<div id="outline-container-orgc4886fc" class="outline-3">
+<h3 id="orgc4886fc">Sockets</h3>
+<div class="outline-text-3" id="text-orgc4886fc">
 <p>
 Linux sockets are essentially file-like-things that represent network connections. They are identified by a combination of host and port-number. We can write to and read from a socket. Writes will be turned into packets and sent out. Addresses can be a an <code>IP address</code> or a <code>hostname</code>. In the latter case we perform a <code>DNS lookup</code> to get the <code>IP address</code> associated with the <code>hostname</code>.
 </p>
@@ -64,9 +64,9 @@ Linux sockets are essentially file-like-things that represent network connection
 </div>
 </div>
 
-<div id="outline-container-orgb395092" class="outline-2">
-<h2 id="orgb395092">Sockets in Common Lisp</h2>
-<div class="outline-text-2" id="text-orgb395092">
+<div id="outline-container-orgda4ce28" class="outline-2">
+<h2 id="orgda4ce28">Sockets in Common Lisp</h2>
+<div class="outline-text-2" id="text-orgda4ce28">
 <p>
 To play around with sockets in common lisp we are going to use a package called <code>usocket</code>. Start up a REPL and load it up with Quicklisp. Let's set a variable to hold the host address. Initially we'll use the loopback interface (localhost) which is always at <code>127.0.0.1</code>.
 </p>
@@ -169,9 +169,9 @@ And that's it. Keep evaluating the read-line expression to read more lines from 
 </div>
 </div>
 
-<div id="outline-container-org66f7a99" class="outline-2">
-<h2 id="org66f7a99">Final notes</h2>
-<div class="outline-text-2" id="text-org66f7a99">
+<div id="outline-container-orgc2e685f" class="outline-2">
+<h2 id="orgc2e685f">Final notes</h2>
+<div class="outline-text-2" id="text-orgc2e685f">
 <ul class="org-ul">
 <li>The above uses plain HTTP. HTTPS adds a whole layer of complexity that is glossed over here.</li>
 <li>This method is just for fun and learning. If you are making something serious then you'll want to use a fully featured HTTP client library.</li>
