remove lisp/sockets post

--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-orgb1b9045" class="outline-2">
-<h2 id="orgb1b9045">404 - page not found</h2>
-<div class="outline-text-2" id="text-orgb1b9045">
+<div id="outline-container-org46a98a7" class="outline-2">
+<h2 id="org46a98a7">404 - page not found</h2>
+<div class="outline-text-2" id="text-org46a98a7">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
