--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org4c59b3e" class="outline-2">
-<h2 id="org4c59b3e">Convolution</h2>
-<div class="outline-text-2" id="text-org4c59b3e">
+<div id="outline-container-orgc34dff4" class="outline-2">
+<h2 id="orgc34dff4">Convolution</h2>
+<div class="outline-text-2" id="text-orgc34dff4">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-orgb27d3d5" class="outline-3">
-<h3 id="orgb27d3d5">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-orgb27d3d5">
+<div id="outline-container-org11bed03" class="outline-3">
+<h3 id="org11bed03">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org11bed03">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-org06dfb3f" class="outline-3">
-<h3 id="org06dfb3f">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-org06dfb3f">
+<div id="outline-container-orgf7fae69" class="outline-3">
+<h3 id="orgf7fae69">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-orgf7fae69">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-orgfdd242d" class="outline-3">
-<h3 id="orgfdd242d">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-orgfdd242d">
+<div id="outline-container-org339ffd5" class="outline-3">
+<h3 id="org339ffd5">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-org339ffd5">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-org151ef7f" class="outline-3">
-<h3 id="org151ef7f">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-org151ef7f">
+<div id="outline-container-org1d071e3" class="outline-3">
+<h3 id="org1d071e3">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org1d071e3">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-org48742b4" class="outline-3">
+<div id="outline-container-orge5274c7" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
