--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org89e64a7" class="outline-2">
-<h2 id="org89e64a7">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org89e64a7">
+<div id="outline-container-org4bb2cf5" class="outline-2">
+<h2 id="org4bb2cf5">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org4bb2cf5">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-orgb87aaa1" class="outline-3">
-<h3 id="orgb87aaa1">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-orgb87aaa1">
+<div id="outline-container-org0d8c2be" class="outline-3">
+<h3 id="org0d8c2be">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org0d8c2be">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org49ee173" class="outline-4">
-<h4 id="org49ee173">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org49ee173">
+<div id="outline-container-org36f7721" class="outline-4">
+<h4 id="org36f7721">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org36f7721">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org1bcc884" class="outline-4">
-<h4 id="org1bcc884">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org1bcc884">
+<div id="outline-container-orgfa587f6" class="outline-4">
+<h4 id="orgfa587f6">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-orgfa587f6">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org421d5f3" class="outline-3">
-<h3 id="org421d5f3">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org421d5f3">
+<div id="outline-container-orgc892a38" class="outline-3">
+<h3 id="orgc892a38">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-orgc892a38">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-org35a4283" class="outline-3">
-<h3 id="org35a4283">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-org35a4283">
+<div id="outline-container-org6835a5f" class="outline-3">
+<h3 id="org6835a5f">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-org6835a5f">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org738ade7" class="outline-3">
-<h3 id="org738ade7">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org738ade7">
+<div id="outline-container-org8206439" class="outline-3">
+<h3 id="org8206439">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org8206439">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org3ff89a8" class="outline-3">
-<h3 id="org3ff89a8">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org3ff89a8">
+<div id="outline-container-orgdf22bae" class="outline-3">
+<h3 id="orgdf22bae">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-orgdf22bae">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgda002af" class="outline-4">
-<h4 id="orgda002af">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgda002af">
+<div id="outline-container-org3a1fcdb" class="outline-4">
+<h4 id="org3a1fcdb">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org3a1fcdb">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org23498cc" class="outline-3">
-<h3 id="org23498cc">Aliasing</h3>
-<div class="outline-text-3" id="text-org23498cc">
+<div id="outline-container-org79d3d20" class="outline-3">
+<h3 id="org79d3d20">Aliasing</h3>
+<div class="outline-text-3" id="text-org79d3d20">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-orgbb82331" class="outline-3">
-<h3 id="orgbb82331">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-orgbb82331">
+<div id="outline-container-org4bce02f" class="outline-3">
+<h3 id="org4bce02f">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org4bce02f">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
