add habit tracker

--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgc34dff4" class="outline-2">
-<h2 id="orgc34dff4">Convolution</h2>
-<div class="outline-text-2" id="text-orgc34dff4">
+<div id="outline-container-orgad61c24" class="outline-2">
+<h2 id="orgad61c24">Convolution</h2>
+<div class="outline-text-2" id="text-orgad61c24">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org11bed03" class="outline-3">
-<h3 id="org11bed03">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org11bed03">
+<div id="outline-container-org702bf5a" class="outline-3">
+<h3 id="org702bf5a">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org702bf5a">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-orgf7fae69" class="outline-3">
-<h3 id="orgf7fae69">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-orgf7fae69">
+<div id="outline-container-orga51de2d" class="outline-3">
+<h3 id="orga51de2d">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-orga51de2d">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-org339ffd5" class="outline-3">
-<h3 id="org339ffd5">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-org339ffd5">
+<div id="outline-container-org2d7cc73" class="outline-3">
+<h3 id="org2d7cc73">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-org2d7cc73">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-org1d071e3" class="outline-3">
-<h3 id="org1d071e3">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-org1d071e3">
+<div id="outline-container-org806f6c9" class="outline-3">
+<h3 id="org806f6c9">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org806f6c9">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-orge5274c7" class="outline-3">
+<div id="outline-container-org66045f3" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
