--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ hi i'm luke - this is my blog
 <li><a href="https://larzeitlin.github.io/simple-flashcards">simple flashcards</a></li>
 <li><a href="scittle-hilbert-curve.html">scittle hilbert curve</a></li>
 <li><a href="i-ching.html">i ching</a></li>
+<li><a href="http://www.lzeitlin.xyz/lzboard/">habit tracker</a></li>
 </ul>
 </div>
 </body>
